@@ -59,8 +59,6 @@ run {
                 '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
                 '--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
                 '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
-                '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-
         ]    }
 }
 mainClassName = 'dr.Main'
